arreglando lo de la contraseña con correo real

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@adonisjs/lucid": "^21.6.1",
     "@adonisjs/mail": "^9.2.2",
     "@adonisjs/validator": "^13.0.2",
+    "@adonisjs/view": "^6.2.0",
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.6.1",
     "mysql2": "^3.14.0",
