subiendo el env.example

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,16 @@ TZ=UTC
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=
+APP_KEY=05oobBn28gUOlWg3u7WI3biqJ_vHaNyS
 NODE_ENV=development
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=Onepiece
-DB_DATABASE=restaurante
-SMTP_HOST=
-SMTP_PORT=
+DB_PASSWORD=
+DB_DATABASE=
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=diamarcelaleal23@gmail.com
+SMTP_PASSWORD=nbfbbdkmathnbwcs
+SMTP_FROM_EMAIL=diamarcelaleal23@gmail.com
+SMTP_FROM_NAME="Gastrobar Morichal"
