subiendo el env.example

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,10 @@ DB_PASSWORD=
 DB_DATABASE=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=diamarcelaleal23@gmail.com
-SMTP_PASSWORD=nbfbbdkmathnbwcs
-SMTP_FROM_EMAIL=diamarcelaleal23@gmail.com
+SMTP_USERNAME=diamarcelaleal23@gmail.com /  / Cambia esto por tu correo electrónico
+SMTP_PASSWORD=nbfbbdkmathnbwcs      // Cambia esto por tu contraseña de aplicación de Gmail
+SMTP_FROM_EMAIL=diamarcelaleal23@gmail.com // Cambia esto por tu correo electrónico
 SMTP_FROM_NAME="Gastrobar Morichal"
+
+// este archivo es un ejemplo de .env, debes crear un archivo .env en la raiz del proyecto y copiar el contenido de este archivo
+// y completar los campos que faltan, como la contraseña de la base de datos y el nombre de la base de datos
