correcion en el package.json

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_DATABASE=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=diamarcelaleal23@gmail.com /  / Cambia esto por tu correo electrónico
-SMTP_PASSWORD=ntnspxcxuadebgxj      // Cambia esto por tu contraseña de aplicación de Gmail
+SMTP_PASSWORD=ntnspxcxuadebgxj      // copiar esto en .env para que funcione correctamente
 SMTP_FROM_EMAIL=diamarcelaleal23@gmail.com // Cambia esto por tu correo electrónico
 SMTP_FROM_NAME="Gastrobar Morichal"
 
